src/auryn/codegen_java/snapshots/auryn__auryn__codegen_java__class_generator__tests__simple.snap
---
source: src/auryn/codegen_java/class_generator.rs
expression: "generate_class_wrapped(\"1 + 2 * 3\")"
---
ClassData
  this_class:		#13	Main
  super_class:		#17	java/lang/Object
Constant pool:
  #01 = Utf8			main$main
  #02 = Utf8			()V
  #03 = Integer			1
  #04 = Integer			2
  #05 = Integer			3
  #06 = Utf8			Code
  #07 = Utf8			StackMapTable
  #08 = Utf8			main
  #09 = Utf8			([Ljava/lang/String;)V
  #10 = Utf8			[Ljava/lang/String;
  #11 = Class		#10	[Ljava/lang/String;
  #12 = Utf8			Main
  #13 = Class		#12	Main
  #14 = NameAndType	#1:#2	main$main:()V
  #15 = MethodRef	#13.#14	Main:main$main:()V
  #16 = Utf8			java/lang/Object
  #17 = Class		#16	java/lang/Object

{
  fn main$main {
    descriptor: ()V
    flags: PUBLIC | STATIC
    Code:
      stack = 3, locals = 1
       0: LoadConstant		#3	1
       2: LoadConstant		#4	2
       4: LoadConstant		#5	3
       6: IMul
       7: IAdd
       8: Pop
       9: Return
      StackMapTable:
        Full
          offset_delta = 0
          locals = [  ]
          Stack = [  ]
  }

  fn main {
    descriptor: ([Ljava/lang/String;)V
    flags: PUBLIC | STATIC
    Code:
      stack = 0, locals = 2
      0: InvokeStatic		#15	Main:main$main:()V
      3: Return
      StackMapTable:
        Full
          offset_delta = 0
          locals = [ Object '[Ljava/lang/String;' ]
          Stack = [  ]
  }

}
