src/auryn/codegen_java/snapshots/auryn__auryn__codegen_java__class_generator__tests__stack_map_table_generation-2.snap
---
source: src/auryn/codegen_java/class_generator.rs
expression: "generate_class_wrapped(r#\"\n        \tloop {\n        \t\tloop {\n        \t\t\tif true {\n        \t\t\t\tlet val: I32 = 0\n        \t\t\t\tif false {\n        \t\t\t\t}\n        \t\t\t}\n        \t\t}\n        \t}\n            \"#)"
---
ClassData
  this_class:		#11	Main
  super_class:		#15	java/lang/Object
Constant pool:
  #01 = Utf8			main$main
  #02 = Utf8			()V
  #03 = Integer			0
  #04 = Utf8			Code
  #05 = Utf8			StackMapTable
  #06 = Utf8			main
  #07 = Utf8			([Ljava/lang/String;)V
  #08 = Utf8			[Ljava/lang/String;
  #09 = Class		#8	[Ljava/lang/String;
  #10 = Utf8			Main
  #11 = Class		#10	Main
  #12 = NameAndType	#1:#2	main$main:()V
  #13 = MethodRef	#11.#12	Main:main$main:()V
  #14 = Utf8			java/lang/Object
  #15 = Class		#14	java/lang/Object

{
  fn main$main {
    descriptor: ()V
    flags: PUBLIC | STATIC
    Code:
      stack = 1, locals = 2
       0: IConst			1
       1: IfI !=		7
       4: Goto				18
       7: LoadConstant		#3	0
       9: IStore			0
      11: IConst			0
      12: IfI !=		18
      15: Goto				18
      18: Goto				0
      StackMapTable:
        Full
          offset_delta = 0
          locals = [  ]
          Stack = [  ]
        Full
          offset_delta = 3
          locals = [  ]
          Stack = [  ]
        Full
          offset_delta = 2
          locals = [  ]
          Stack = [  ]
        Full
          offset_delta = 7
          locals = [ Integer ]
          Stack = [  ]
        Full
          offset_delta = 2
          locals = [  ]
          Stack = [  ]
  }

  fn main {
    descriptor: ([Ljava/lang/String;)V
    flags: PUBLIC | STATIC
    Code:
      stack = 0, locals = 2
      0: InvokeStatic		#13	Main:main$main:()V
      3: Return
      StackMapTable:
        Full
          offset_delta = 0
          locals = [ Object '[Ljava/lang/String;' ]
          Stack = [  ]
  }

}
