src/auryn/codegen_java/snapshots/auryn__auryn__codegen_java__class_generator__tests__structural-2.snap
---
source: src/auryn/codegen_java/class_generator.rs
expression: "generate_classes(r#\"\n            // main\n            fn main() { print({a: 1}.a) }\n            \"#)"
---
Main:
ClassData
  this_class:		#26	Main
  super_class:		#30	java/lang/Object
Constant pool:
  #01 = Utf8			main$main
  #02 = Utf8			()V
  #03 = Utf8			java/io/PrintStream
  #04 = Class		#3	java/io/PrintStream
  #05 = Utf8			java/lang/String
  #06 = Class		#5	java/lang/String
  #07 = Utf8			java/lang/System
  #08 = Class		#7	java/lang/System
  #09 = Utf8			out
  #10 = Utf8			Ljava/io/PrintStream;
  #11 = NameAndType	#9:#10	out:Ljava/io/PrintStream;
  #12 = FieldRef	#8.#11	java/lang/System.out:Ljava/io/PrintStream;
  #13 = Utf8			1
  #14 = String		#13	1
  #15 = Utf8			println
  #16 = Utf8			(Ljava/lang/String;)V
  #17 = NameAndType	#15:#16	println:(Ljava/lang/String;)V
  #18 = MethodRef	#4.#17	java/io/PrintStream:println:(Ljava/lang/String;)V
  #19 = Utf8			Code
  #20 = Utf8			StackMapTable
  #21 = Utf8			main
  #22 = Utf8			([Ljava/lang/String;)V
  #23 = Utf8			[Ljava/lang/String;
  #24 = Class		#23	[Ljava/lang/String;
  #25 = Utf8			Main
  #26 = Class		#25	Main
  #27 = NameAndType	#1:#2	main$main:()V
  #28 = MethodRef	#26.#27	Main:main$main:()V
  #29 = Utf8			java/lang/Object
  #30 = Class		#29	java/lang/Object

{
  fn main$main {
    descriptor: ()V
    flags: PUBLIC | STATIC
    Code:
      stack = 2, locals = 1
      0: GetStatic		#12	java/lang/System.out:Ljava/io/PrintStream;
      3: LoadConstant		#14	1
      5: InvokeVirtual		#18	java/io/PrintStream:println:(Ljava/lang/String;)V
      8: Return
      StackMapTable:
        Full
          offset_delta = 0
          locals = [  ]
          Stack = [  ]
  }

  fn main {
    descriptor: ([Ljava/lang/String;)V
    flags: PUBLIC | STATIC
    Code:
      stack = 0, locals = 2
      0: InvokeStatic		#28	Main:main$main:()V
      3: Return
      StackMapTable:
        Full
          offset_delta = 0
          locals = [ Object '[Ljava/lang/String;' ]
          Stack = [  ]
  }

}

-----
